<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background"
    >
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/genericCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:elevation="20dp"
        card_view:contentPadding="20dp"
        card_view:cardElevation="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true"
        card_view:cardMaxElevation="6dp"
        android:foreground="?android:attr/selectableItemBackground"
       >
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/changePassLin"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center_horizontal"
            >

            <ImageView
                android:id="@+id/appImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/suma"
                />
           </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/currentPassEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/password"
                    android:hint="@string/current_pass" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newPassEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/new_password"
                    android:hint="@string/new_pass" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirmPassEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:drawableLeft="@drawable/confirm_password"
                    android:hint="@string/confirm_pass" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/changePassButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/chnge_pass"
                android:textAllCaps="false"
                android:theme="@style/ThemButton"
                android:textColor="@color/clrWhite"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>