<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fifteen">
    <TextView
        android:text="@string/strSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/txtLable"
        android:textColor="@color/black"
        android:textSize="16sp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:scaleType="center"
        android:id="@+id/imgClose"
        android:src="@android:drawable/ic_menu_close_clear_cancel"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fifteen"
        android:background="@drawable/form_header_background"
        android:padding="@dimen/ten"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableRight="@drawable/blue_dropdown_arrow"
        android:text="Select"
        android:focusable="false"
        android:id="@+id/dropdownSelectImage"
        android:focusableInTouchMode="false"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/clrLoginButton"
        android:layout_margin="@dimen/fifteen"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:id="@+id/btnBrowseImage"
        android:text="@string/strSelectImage"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llGallleryView">

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_gravity="right"
        android:orientation="horizontal">
        <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/clrLoginButton"
        android:layout_margin="@dimen/fifteen"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:id="@+id/btnUpload"
        android:text="@string/strUpload"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/gray"
            android:layout_margin="@dimen/fifteen"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:id="@+id/btnCancel"
            android:text="@string/strClose"/>
    </LinearLayout>
</LinearLayout>
    </ScrollView>